# football

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
src/: main.rs  player.rs  position.rs  team.rs
src/basic/: mod.rs  player.rs  position.rs  team.rs
src/database/: mod.rs  player_db.rs  team_db.rs
src/web/: mod.rs  player_rest.rs  team_rest.rs
