[package]
name = "football"
version = "0.1.0"
authors = ["Rafael Chaves <rafael.chaves@airfox.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ferris-says = "0.2"
rocket = "0.4.7"
serde = { version = "1.0", features = ["derive"] }
bson = "1.2.0"

[dependencies.rocket_contrib]
default-features = false
features = ["json"]

[dependencies.mongodb]
version = "1.1.1"
default-features = false
features = ["sync"]
